[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vyomacast"
version = "0.1.0"
description = "High-throughput news extraction and live presentation platform"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    # Core
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",

    # Database
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "pgvector>=0.3,<1.0",
    "alembic>=1.13,<2.0",

    # Cache
    "redis[hiredis]>=5.0,<6.0",

    # Event bus
    "nats-py>=2.7,<3.0",

    # Extraction
    "trafilatura>=1.8,<2.0",
    "readability-lxml>=0.8,<1.0",

    # ML / Embeddings
    "sentence-transformers>=2.5,<4.0",
    "numpy>=1.26,<3.0",

    # API
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",

    # HTTP client
    "aiohttp>=3.9,<4.0",

    # Feed parsing
    "feedparser>=6.0,<7.0",

    # Observability
    "structlog>=24.1,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<6.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.3,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
